AOTCompiledMethod::print_on triggers assertion after JDK-8210012

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 15
    • Affects Version/s: 15
    • Component/s: hotspot
    • 15
    • b20

      It looks like AOTCompiledMethod::print_on needs the same fix as done in

      src/hotspot/share/compiler/compileTask.cpp

      where we explicitly get the timestamp() from the tty not the passed in stream.

            Assignee:
            Lois Foltan
            Reporter:
            David Holmes
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: