8243045: AOTCompiledMethod::print_on triggers assertion after JDK-8210012

Fix outputStream time stamp issue when AOT and -Xlog:all=trace are specified together.

Reviewed-by: coleenp, hseigel, kvn